full screen toggle working

--- a/wp-content/themes/blogasm-child/style.css
+++ b/wp-content/themes/blogasm-child/style.css
@@ -10,12 +10,20 @@
  Text Domain:  blogasmchild
 */
 
-#colophon{
-    display: none;
-}   
-
-@media (min-width: 992px){
-.hamburger-menu.d-lg-none {
-    display: block!important;
+#colophon {
+  display: none;
 }
+
+@media (min-width: 992px) {
+  .hamburger-menu.d-lg-none {
+    display: block !important;
+  }
+}
+
+.hamburger-menu {
+  z-index: 100;
+}
+
+.body-overlay {
+  background: #fff;
 }
