--- a/wp-content/themes/blogasm-child/style.css
+++ b/wp-content/themes/blogasm-child/style.css
@@ -10,6 +10,8 @@
  Text Domain:  blogasmchild
 */
 
+/* STYLING TOGGLE BUTTON AND MENU TOGGLE EVENT */
+
 #colophon {
   display: none;
 }
@@ -20,10 +22,125 @@
   }
 }
 
+.social-profiles-widget {
+  display: none !important;
+}
+
 .hamburger-menu {
-  z-index: 100;
+  z-index: 900;
+  top: 4px;
 }
 
 .body-overlay {
   background: #fff;
+}
+
+.close-navigation.d-flex {
+  display: none !important;
+}
+
+.main-navigation.is-active {
+  opacity: 1;
+}
+
+.hamburger-menu span:nth-child(4) {
+  display: none;
+}
+
+.site-header {
+  position: fixed;
+  width: 100%;
+}
+
+.nav-bar.bg-white {
+  background-color: transparent !important;
+}
+
+/* STYLING MAIN TOGGLE MENU */
+
+#primary-menu {
+  display: none !important;
+}
+
+.main-navigation {
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: 800;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  padding: 48px 20px 48px 48px;
+  border: 0 !important;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: #fff;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-navigation.is-active {
+  pointer-events: all;
+}
+
+.main-navigation ul {
+  list-style: none;
+  flex-direction: column !important;
+  width: fit-content;
+}
+
+ul.primary-menu li:first-child {
+  display: none;
+}
+
+.primary-menu li a {
+  font-size: 1.3rem;
+}
+
+/* HOVER IMG FUNCTION ON TOGGLE MENU */
+.nav-hover-img-container {
+  height: 60vh;
+  width: 90%;
+}
+
+.hover-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* MEDIA QUERIES */
+
+@media (min-width: 768px) {
+  #primary-menu {
+    display: grid !important;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+  }
+}
+
+@media (min-width: 992px) {
+  .main-navigation {
+    flex-direction: row-reverse;
+  }
+
+  #primary-menu {
+    display: block !important;
+  }
+
+  .nav-hover-img-container {
+    width: 40%;
+  }
+
+  .main-navigation ul {
+    display: flex;
+    list-style: none;
+    flex-direction: column !important;
+    width: fit-content;
+    margin-left: 8rem !important;
+  }
 }
