--- a/wp-content/themes/blogasm-child/style.css
+++ b/wp-content/themes/blogasm-child/style.css
@@ -10,10 +10,33 @@
  Text Domain:  blogasmchild
 */
 
-/* GLOBAL STYLES  */
+.elementor-widget-text-editor {
+  color: #333 !important;
+}
+
+/* ACCENTS */
+
+.brown-accent {
+  color: #8e6f5d !important;
+}
+
+.orange-accent {
+  color: #c66e58 !important;
+}
+
+.blue-accent {
+  color: #447090 !important;
+}
+
+.dark-purple-accent {
+  color: #3d3c3f !important;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
+
+/* GLOBAL STYLES  */
 
 .elementor-section.elementor-section-boxed > .elementor-container {
   max-width: none !important;
@@ -36,7 +59,7 @@
 }
 
 .hamburger-menu {
-  z-index: 900;
+  z-index: 9999 !important;
   top: 4px;
 }
 
@@ -59,10 +82,8 @@
 .site-header {
   position: fixed;
   width: 100%;
-}
-
-.nav-bar.bg-white {
-  background-color: transparent !important;
+  z-index: 500 !important;
+  top: 0;
 }
 
 /* STYLING MAIN TOGGLE MENU */
@@ -77,7 +98,7 @@
   top: 0;
   left: 0;
   opacity: 0;
-  z-index: 800;
+  z-index: 999 !important;
   width: 100%;
   max-width: 100%;
   height: 100%;
@@ -140,8 +161,11 @@ ul.primary-menu li:first-child {
 }
 
 .hero-img.loaded {
-  animation: fadeInDown 0.3s ease-in-out;
+  animation: fadeInDown 0.4s;
+  animation-timing-function: cubic-bezier(0, 0.59, 0.59, 1);
   opacity: 1;
+  position: relative;
+  z-index: 600 !important;
 }
 
 .scroll-cta {
@@ -150,21 +174,23 @@ ul.primary-menu li:first-child {
 }
 
 .scroll-cta.loaded {
-  animation: fadeSlideLeft 0.5s ease-in 0.2s forwards;
+  animation: fadeSlideLeft 0.8s 0.4s forwards;
+  animation-timing-function: cubic-bezier(0.49, -0.02, 0.59, 1);
 }
 
 .hero-description {
   opacity: 0;
-  transform: translateX(-50%);
+  transform: translateX(-80%);
 }
 
 .hero-description.loaded {
-  animation: fadeSlideRight 0.5s ease-in 0.2s forwards;
+  animation: fadeSlideRight 0.8s 0.4s forwards;
+  animation-timing-function: cubic-bezier(0.49, -0.02, 0.59, 1);
 }
 
 @keyframes fadeSlideRight {
   0% {
-    transform: translateX(-50%);
+    transform: translateX(-80%);
     opacity: 0;
   }
   80% {
@@ -258,4 +284,87 @@ ul.primary-menu li:first-child {
     width: 80% !important;
     margin: 0 auto;
   }
+}
+
+/* POST STYLES */
+.post-section {
+  margin: 10% 0 !important;
+}
+
+.post-hero-container {
+  height: 50vh;
+}
+
+.post-img-container {
+  height: 50vh;
+}
+
+.post-hero-img {
+  height: 60vh !important;
+  width: auto !important;
+  z-index: 600;
+}
+
+.post-hero-img.hero-img {
+  opacity: 0;
+}
+
+.post-hero-img.hero-img.loaded {
+  opacity: 1;
+  animation: none;
+}
+
+.post-description {
+  font-size: 2.6rem;
+}
+
+.post-text-container {
+  width: 70% !important;
+  margin: 0 auto;
+}
+
+/* STACK IMG */
+.stack-img {
+  width: 60% !important;
+  height: auto !important;
+  margin: 0 auto;
+  right: 5%;
+}
+
+.stack-img.bottom {
+  position: relative;
+  bottom: 10%;
+  left: 5%;
+  z-index: -1;
+}
+
+/* IMAGES */
+.post-small-img {
+  width: 70% !important;
+  height: auto !important;
+  margin: 0 auto;
+}
+
+.centered-full-img {
+  width: 80% !important;
+  margin: 0 auto;
+}
+
+/* TEXT */
+
+.post-text-centered-container {
+  margin: 5% auto 0 auto;
+  width: 40% !important;
+}
+
+/* POST GRID */
+.elementor-widget-posts .elementor-post__read-more,
+.elementor-posts .elementor-post__excerpt p,
+.elementor-widget-posts .elementor-post__title {
+  color: #333 !important;
+}
+
+.elementor-widget-posts .elementor-post__read-more {
+  border: 3px solid #333;
+  padding: 10px 15px;
 }
