--- a/wp-content/themes/blogasm-child/style.css
+++ b/wp-content/themes/blogasm-child/style.css
@@ -16,20 +16,29 @@
 
 /* ACCENTS */
 
-.brown-accent {
+.brown-accent,
+.brown-accent p {
   color: #8e6f5d !important;
 }
 
-.orange-accent {
+.orange-accent,
+.orange-accent p {
   color: #c66e58 !important;
 }
 
-.blue-accent {
+.blue-accent,
+.blue-accent p {
   color: #447090 !important;
 }
 
-.dark-purple-accent {
+.dark-purple-accent,
+.dark-purple-accent p {
   color: #3d3c3f !important;
+}
+
+.gold-accent,
+.gold-accent p {
+  color: #8e806e !important;
 }
 
 .uppercase {
@@ -86,10 +95,21 @@
   top: 0;
 }
 
+.site-header .nav-bar {
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+}
+
 /* STYLING MAIN TOGGLE MENU */
 
 #primary-menu {
   display: none !important;
+}
+
+@media (min-width: 768px) {
+  .site-branding .custom-logo {
+    height: 60px;
+  }
 }
 
 .main-navigation {
@@ -286,22 +306,120 @@ ul.primary-menu li:first-child {
   }
 }
 
+/* CATEGORY PAGE STYLES */
+#sub-hero {
+  height: auto;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  #sub-hero {
+    height: 100vh;
+  }
+}
+
+.hero-container {
+  height: auto !important;
+  width: 90vw !important;
+  margin: 10vh 0 !important;
+}
+
+@media (min-width: 992px) {
+  .hero-container {
+    height: 80vh !important;
+    margin: 0 !important;
+    width: 65vw !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .hero-container {
+    height: 75vh !important;
+    width: 60vw !important;
+  }
+}
+
+.hero-column {
+  height: auto;
+  position: relative;
+}
+
+.hero-description {
+  font-size: 1.7rem;
+}
+
+.hero-description h2 {
+  font-weight: 400 !important;
+  font-size: 2.6rem;
+}
+
+.hero-description p {
+  line-height: 1.3 !important;
+}
+
+.scroll-cta {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .scroll-cta {
+    display: block;
+    position: absolute !important;
+    left: -15%;
+    bottom: 0;
+    writing-mode: vertical-lr;
+  }
+}
+
+.sub-featured-container {
+  width: 90vw !important;
+  margin: 0 auto;
+}
+
+.featured-post-img img {
+  width: 100% !important;
+}
+
+.elementor-grid-3 .elementor-grid {
+  min-height: 400px !important;
+}
+
 /* POST STYLES */
 .post-section {
   margin: 10% 0 !important;
 }
 
 .post-hero-container {
-  height: 50vh;
+  width: 80% !important;
+  margin: 0 auto !important;
+  height: auto;
 }
 
-.post-img-container {
-  height: 50vh;
+@media (min-width: 768px) {
+  .post-hero-img {
+    height: auto !important;
+    width: 70% !important;
+  }
+
+  .post-author,
+  .post-description {
+    width: 90% !important;
+    margin: 0 auto !important;
+  }
+
+  .post-description p {
+    font-size: 2.6rem;
+    line-height: 1.4 !important;
+  }
 }
 
 .post-hero-img {
-  height: 60vh !important;
-  width: auto !important;
+  height: auto !important;
+  /* width: 70% !important; */
+  margin: 0 auto !important;
   z-index: 600;
 }
 
@@ -314,8 +432,9 @@ ul.primary-menu li:first-child {
   animation: none;
 }
 
-.post-description {
-  font-size: 2.6rem;
+.post-description p {
+  font-size: 1.5rem;
+  line-height: 1.4 !important;
 }
 
 .post-text-container {
@@ -338,6 +457,16 @@ ul.primary-menu li:first-child {
   z-index: -1;
 }
 
+.stack-img.top-alt {
+  left: 5%;
+}
+
+.stack-img.bottom-alt {
+  bottom: 10%;
+  right: 5%;
+  z-index: -1;
+}
+
 /* IMAGES */
 .post-small-img {
   width: 70% !important;
@@ -350,11 +479,37 @@ ul.primary-menu li:first-child {
   margin: 0 auto;
 }
 
+.full-img-left {
+  position: absolute !important;
+  left: -20px;
+}
+
+.full-img-right {
+  position: absolute !important;
+  right: -20px;
+}
+
+.double-img-container {
+  width: 80% !important;
+  margin: 0 auto;
+}
+
 /* TEXT */
 
 .post-text-centered-container {
   margin: 5% auto 0 auto;
   width: 40% !important;
+}
+
+.post-pullquote {
+  width: 50% !important;
+  margin: 0 auto;
+  font-size: 2.8rem;
+}
+
+.post-pullquote p {
+  text-align: center !important;
+  line-height: 1.4;
 }
 
 /* POST GRID */
