fixed animations on lei tv

--- a/wp-content/themes/blogasm-child/style.css
+++ b/wp-content/themes/blogasm-child/style.css
@@ -680,6 +680,10 @@ video::-webkit-media-controls {
     padding: 0 5% !important;
   }
 
+  .tv-bottom-row .tv-hero-column {
+    min-height: 400px;
+  }
+
   .tv-column-section-title {
     font-size: 66px;
   }
@@ -708,6 +712,36 @@ video::-webkit-media-controls {
     opacity: 1;
     transform: translateX(0px);
     transition: all 0.3s ease-out;
+  }
+
+  .tv-category-container .elementor-image {
+    position: relative !important;
+  }
+
+  .tv-category-container .elementor-image:before {
+    position: absolute;
+    content: "";
+    height: 100vh !important;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.4) 40%,
+      rgba(0, 0, 0, 0.65) 100%
+    );
+    transition: all 0.5s ease-out;
+  }
+
+  .tv-category-container:hover .elementor-image:before {
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.4) 40%,
+      rgba(0, 0, 0, 0.65) 100%
+    );
+    transition: all 0.5s ease-out;
   }
 
   .hide-on-desktop {
@@ -789,9 +823,9 @@ video::-webkit-media-controls {
   /* LEI TV */
 
   /* find the second one */
-  .tv-hero-column {
+  /* .tv-hero-column {
     min-height: 700px;
-  }
+  } */
 
   .tv-play-btn a {
     display: none;
@@ -833,8 +867,8 @@ video::-webkit-media-controls {
     transform: translateY(4em);
   }
 
-  .tv-play-btn a:hover {
-    background: white;
-    color: white;
+  .tv-play-btn:hover a {
+    background: white !important;
+    color: black;
   }
 }
